Closed Bug 500210 Opened 16 years ago Closed 16 years ago

comparison of unsigned and signed integer warnings

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: davidb, Assigned: davidb)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch trivial fix. (obsolete) — Splinter Review
Trivial patch attached.
Attachment #384882 - Flags: review?(marco.zehe)
Attached patch better fix.Splinter Review
Marco pointed out a less bone-headed fix.
Attachment #384882 - Attachment is obsolete: true
Attachment #384892 - Flags: review?(marco.zehe)
Attachment #384882 - Flags: review?(marco.zehe)
Comment on attachment 384892 [details] [diff] [review] better fix. Much better, thanks! r=me
Attachment #384892 - Flags: review?(marco.zehe) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: