Bug 500210 - comparison of unsigned and signed integer warnings; r=MarcoZ